[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player/assets/tankDark_barrel1_outline.png" type="Texture" id=2]
[ext_resource path="res://scenes/player/assets/tankBody_blue_outline.png" type="Texture" id=3]
[ext_resource path="res://scenes/player/Turret.gd" type="Script" id=4]
[ext_resource path="res://scenes/player/assets/shotLarge.png" type="Texture" id=5]
[ext_resource path="res://scenes/player/assets/shotThin.png" type="Texture" id=6]
[ext_resource path="res://scenes/player/Bullet.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/explosion/Explosion.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/ui/HealthBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://sounds/zapsplat_tank_idling.mp3" type="AudioStream" id=10]
[ext_resource path="res://sounds/zapsplat_tank_driving.mp3" type="AudioStream" id=11]
[ext_resource path="res://sounds/zapsplat_40mm_cannon.mp3" type="AudioStream" id=12]
[ext_resource path="res://sounds/zapsplat_grenade.mp3" type="AudioStream" id=13]
[ext_resource path="res://sounds/zapsplat_vehicle_explosion.mp3" type="AudioStream" id=14]
[ext_resource path="res://sounds/zapsplat_explosion_medium.mp3" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 30 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 26.4 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
HealthBar = ExtResource( 9 )
MAX_HEALTH = 50

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.20434, 0.400006 )
scale = Vector2( 0.673775, 0.714286 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -3.14159
shape = SubResource( 1 )

[node name="Turret" type="Area2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 4 )
BULLET = ExtResource( 7 )

[node name="BarrelFlash" type="AnimatedSprite" parent="Turret"]
visible = false
position = Vector2( 0, -62.6 )
frames = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Turret"]
position = Vector2( 5.96046e-07, 6.24 )
scale = Vector2( 0.85, 0.88 )
texture = ExtResource( 2 )
offset = Vector2( 0, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Turret"]
position = Vector2( 0, -16 )
shape = SubResource( 4 )

[node name="BulletSpawn" type="Position2D" parent="Turret"]
position = Vector2( 0, -52 )

[node name="ReloadTimer" type="Timer" parent="Turret"]
wait_time = 0.75
one_shot = true

[node name="AudioStreamCannon" type="AudioStreamPlayer" parent="Turret"]
stream = ExtResource( 12 )
volume_db = -12.0

[node name="Explosion" parent="." instance=ExtResource( 8 )]
visible = false
scale = Vector2( 0.792857, 0.792857 )
frame = 0
playing = false

[node name="AudioStreamIdle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -30.0

[node name="AudioStreamDriving" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -28.0

[node name="AudioStreamImpact" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="AudioStreamImpactExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0

[node name="AudioStreamExplosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0

[connection signal="animation_finished" from="Turret/BarrelFlash" to="Turret" method="_on_BarrelFlash_animation_finished"]
[connection signal="timeout" from="Turret/ReloadTimer" to="Turret" method="_on_ReloadTimer_timeout"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="finished" from="AudioStreamExplosion" to="." method="_on_AudioStreamExplosion_finished"]
